Fixed PageHeader overlapping MobileSider

--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -85,7 +85,7 @@
 
 	&.open {
 		position: fixed;
-		z-index: 99;
+		z-index: 2000;
 		height: 100%;
 		width: 100%;
 		background-color: #000;
